[package]
name = "ocifs"
version = "0.1.0"
authors = ["AnonymousDapper"]
license = "MIT"
description = "Debugging tool for ociFS filesystems"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
colored = "2.1.0"
thiserror = "1.0.58"
type-layout = "0.2.0"

[dependencies.clap]
version = "4.5.4"
features = ["cargo"]
